@@ -75,7 +75,7 @@ Example  : amputate orc arm\n\r\
 This ability governs the careful removal of body parts as a punishment for \
 crimes.  The target is, amazingly, not harmed during the procedure, but merely \
 loses the specified limb.  The target must be lying on an operating table or bed, \
-bound.
+and bound.  Amputation can also be done to player followers, with their permission.
 
 THIEF_ANALYZEMARK=ANALYZE_MARK
 ANALYZE_MARK=<ABILITY>\
