@@ -3,6 +3,7 @@
   2. Shutdown command now supports AT syntax to set a RL time certain.
   3. Languages now support a translation ID to assist shopkeepers with slang languages.
   4. New Locale: ShoreGrid
+  5. Amputation can be done to player followers, with their permission.
 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
